# plextrac-api2

./: .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  TEMP_API_REVIEW_METHODOLOGY.md  pyproject.toml
docs/: auth.md  endpoint-coverage.md  methodology.md  normal-group-methodology-audit-plan.md  normal-group-methodology-audit-results.md  pagination.md  usage.md
scripts/: generate_endpoints.py
src/plextrac_api/: __init__.py
src/plextrac_api/functions/: __init__.py  admin.py  affected_assets.py  analytics.py  assessments.py  assets.py  auth.py  clients.py  common.py  content_library.py  files.py  findings.py  graph_ql_mutations.py  graph_ql_queries.py  integrations.py  mailer.py  parser_actions.py  reports.py  runbooks.py  scheduler.py  substatus.py  templates.py  tenant.py  users.py  webhooks.py
src/plextrac_api/types/: __init__.py  admin.py  analytics.py  assessments.py  assets.py  auth.py  clients.py  common.py  content_library.py  evidence.py  files.py  findings.py  integrations.py  mailer.py  parser_actions.py  reports.py  runbooks.py  scheduler.py  substatus.py  templates.py  tenant.py  users.py  webhooks.py
tests/unit/: test_function_api.py  test_registry_and_types.py  test_webhooks.py
