[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "plextrac-api"
version = "0.1.0"
description = "Unofficial Python API for PlexTrac"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "PlexTrac SDK Contributors" }
]
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "respx>=0.21",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/plextrac_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/plextrac_api/generated/endpoints.py" = ["E501"]
"src/plextrac_api/functions/*.py" = ["E501"]
