[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "plextrac-api2"
version = "0.1.0"
description = "Unofficial Python API for PlexTrac"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "PlexTrac SDK Contributors" }
]
keywords = ["plextrac", "api", "sdk", "security", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27,<1",
]

[project.urls]
Homepage = "https://github.com/erikrubstein/plextrac-api2"
Repository = "https://github.com/erikrubstein/plextrac-api2"
Issues = "https://github.com/erikrubstein/plextrac-api2/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "respx>=0.21",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/plextrac_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/plextrac_api/generated/endpoints.py" = ["E501"]
"src/plextrac_api/functions/*.py" = ["E501"]
